add diary entry view

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 {{#each diaryEntries}}
 <ul>
     <li>{{ date }}:
-        <a href="/view?date={{ date }}">{{ title }}</a>
+        <a href="entry/view?date={{ date }}">{{ title }}</a>
     </li>
 </ul>
 {{/each}}
