--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -4,7 +4,7 @@
         <p>
             <a href='/'>Home</a>
             |
-            <a href='/add'>My Day</a>
+            <a href='/entry/add'>My Day</a>
         </p>
     </div>
 </header>
