--- a/views/entryedit.hbs
+++ b/views/entryedit.hbs
@@ -12,8 +12,8 @@
         <input type='text' name='title' value='{{#if entry }}{{entry.title}}{{/if}}' />
     </p>
     <br />
-    <textarea rows=5 cols=40 name='body'>
-        {{#if entry }}{{entry.body}}{{/if}} 
+    <textarea rows=5 cols=40 name='content'>
+        {{#if entry }}{{entry.content}}{{/if}} 
     </textarea>
     <br />
     <input type='submit' value='Submit' />
