--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/assets/vendor/papercss/paper.min.css"/>
+    <link rel='stylesheet' href='/assets/stylesheets/style.css' />
   </head>
   <body>
     {{> header }}
