--- a/views/entryedit.hbs
+++ b/views/entryedit.hbs
@@ -4,21 +4,37 @@
     {{else}}
     <input type='hidden' name='docreate' value="update">
     {{/if}}
-    <p>Date:
-        {{#if docreate }}
-        <input type='text' name='date' value='' />
-        {{else}}
-        {{#if entry }}{{date}}{{/if}}
-        <input type='hidden' name='date' value='{{#if entry }}{{date}}{{/if}}' />
-        {{/if}}
-    </p>
-    <p>Title:
-        <input type='text' name='title' value='{{#if entry }}{{entry.title}}{{/if}}' />
-    </p>
-    <br />
-    <textarea rows=10 cols=100 name='content'>
-        {{#if entry }}{{entry.content}}{{/if}} 
-    </textarea>
-    <br />
-    <input type='submit' value='Submit' />
+    <div class="row">
+        <div class="col sm-4">
+            <div class="form-group">
+                <label for="date">Date</label>
+                {{#if docreate }}
+                <input type="text" name="date" id="date" class="input-block" placeholder="Choose date">
+                {{else}}
+                <input type="text" name="date" id="date" class="input-block" disabled
+                    value='{{#if entry }}{{date}}{{/if}}'>
+                <input hidden type="text" name="date" value='{{#if entry }}{{date}}{{/if}}'>
+                {{/if}}
+            </div>
+        </div>
+        <div class="col sm-8">
+            <div class="form-group">
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title" class="input-block" placeholder="Title"
+                    value='{{#if entry }}{{entry.title}}{{/if}}'>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col sm-12">
+            <div class="form-group">
+                <label for="content">Content</label>
+                <textarea class="input-block" rows="10" name='content' id="content"
+                    placeholder="What is on our mind?">{{#if entry }}{{entry.content}}{{/if}}</textarea>
+            </div>
+        </div>
+    </div>
+    <div class="row flex-right">
+        <button type='submit' class="sm-2 col btn-success">Save</button>
+    </div>
 </form>
