--- a/diary/views/entryview.hbs
+++ b/diary/views/entryview.hbs
@@ -1,8 +1,10 @@
-{{#if entry}}<h3>{{ entry.title }}</h3>{{/if}}
-{{#if entry}}<p>{{ entry.content }}</p>{{/if}}
-<p>Date: {{ date }}</p>
-{{#if date }}
-    <hr/>
+<div id="entryView">
+    {{#if entry}}<h3 id="entryTitle">{{ entry.title }}</h3>{{/if}}
+    {{#if entry}}<p id="entryContent">{{ entry.content }}</p>{{/if}}
+    <p id="showDate">Date: {{ date }}</p>
+    {{#if date }}
+    <hr />
     <p><a href="/entry/destroy?date={{date}}">Delete</a>
-     | <a href="/entry/edit?date={{date}}">Edit</a></p>
-{{/if}}
+        | <a href="/entry/edit?date={{date}}">Edit</a></p>
+    {{/if}}
+</div>
