--- a/diary/views/partials/sidebarhistory.hbs
+++ b/diary/views/partials/sidebarhistory.hbs
@@ -1,10 +1,10 @@
 <div class="paper">
     <h3 class="sidebar-title" style="text-align:center">History</h3>
     <div class="row">
-        {{#each diaryEntries}}
+        {{#each entryDates}}
         <div class="collapsible" style="width:100%">
             <input id="entry" type="radio" name="entry">
-            <label for="entry">{{date}}</label>
+            <label for="entry">{{this}}</label>
         </div>
         {{/each}}
     </div>
