--- a/diary/views/partials/sidebarhistory.hbs
+++ b/diary/views/partials/sidebarhistory.hbs
@@ -1,11 +1,16 @@
 <div class="paper">
     <h3 class="sidebar-title" style="text-align:center">History</h3>
     <div class="row">
+        <div class="collapsible" style="width:100%">
+            <a href="/{{today}}" class="history-item">Today</a>
+        </div>
         {{#each entryDates}}
         <div class="collapsible" style="width:100%">
-            <input id="entry" type="radio" name="entry">
-            <label for="entry">{{this}}</label>
+            <a href="/{{date}}" class="history-item">{{formattedDate}}</a>
         </div>
         {{/each}}
+        <div class="collapsible" style="width:100%">
+            <a href="/new" class="history-item">+ New Entry</a>
+        </div>
     </div>
 </div>
