--- a/diary/views/partials/entry.hbs
+++ b/diary/views/partials/entry.hbs
@@ -6,11 +6,21 @@
         <input type='hidden' name='docreate' value="update">
         {{/if}}
         <div class="row">
+            <!-- Error message -->
+            {{#if error}}
+            <div class="col sm-12">
+                <input class="alert-state" id="alert-5" type="checkbox">
+                <div class="alert alert-danger dismissible">
+                    {{error}}
+                    <label class="btn-close" for="alert-5">X</label>
+                </div>
+            </div>
+            {{/if}}
             <div class="col sm-4">
                 <div class="form-group">
                     <label for="date">Date</label>
                     {{#if docreate }}
-                    <input type="text" name="date" id="date" class="input-block" placeholder="Choose date">
+                    <input type="text" name="date" id="date" class="input-block" value="{{date}}">
                     {{else}}
                     <input type="text" name="date" id="date" class="input-block" disabled
                         value='{{#if entry }}{{date}}{{/if}}'>
@@ -22,7 +32,7 @@
                 <div class="form-group">
                     <label for="title">Title</label>
                     <input type="text" name="title" id="title" class="input-block" placeholder="Title"
-                        value='{{#if entry }}{{entry.title}}{{/if}}'>
+                        autocomplete="off" value='{{#if entry }}{{entry.title}}{{/if}}'>
                 </div>
             </div>
         </div>
@@ -30,7 +40,7 @@
             <div class="col sm-12">
                 <div class="form-group">
                     <label for="content">Content</label>
-                    <textarea class="input-block" rows="10" name='content' id="content"
+                    <textarea class="input-block" rows="10" name='content' id="content" autocomplete="off"
                         placeholder="What is on your mind?">{{#if entry }}{{entry.content}}{{/if}}</textarea>
                 </div>
             </div>
