--- a/diary/views/partials/sidebarhistory.hbs
+++ b/diary/views/partials/sidebarhistory.hbs
@@ -2,15 +2,15 @@
     <h3 class="sidebar-title" style="text-align:center">History</h3>
     <div class="row">
         <div class="collapsible" style="width:100%">
-            <a href="/{{today}}" class="history-item">Today</a>
+            <a href="/entry/today" class="history-item">Today</a>
         </div>
         {{#each entryDates}}
         <div class="collapsible" style="width:100%">
-            <a href="/{{date}}" class="history-item">{{formattedDate}}</a>
+            <a href="/entry/{{date}}" class="history-item">{{formattedDate}}</a>
         </div>
         {{/each}}
         <div class="collapsible" style="width:100%">
-            <a href="/new" class="history-item">+ New Entry</a>
+            <a href="/entry/new" class="history-item">+ New Entry</a>
         </div>
     </div>
 </div>
