--- a/diary/views/login.hbs
+++ b/diary/views/login.hbs
@@ -1,4 +1,4 @@
-<div id="diaryLoginPage" class="row flex-center">
+<div class="row flex-center form-middle">
     <div class="sm-5 col border border-primary padding-left-large padding-right-large">
         <form id="diaryLoginForm" method="POST" action="/user/login">
             <div class="form-group">
