--- a/diary/views/login.hbs
+++ b/diary/views/login.hbs
@@ -1,6 +1,9 @@
 <div class="row flex-center form-middle">
     <div class="sm-5 col border border-primary padding-left-large padding-right-large">
         <form id="diaryLoginForm" method="POST" action="/user/login">
+            {{#if error}}
+              <div class="alert alert-danger">{{error}}</div>
+            {{/if}}
             <div class="form-group">
                 <label for="username">User name: </label>
                 <input class="input-block" type="text" name="username" id="username" placeholder="User Name">
