--- a/diary/views/login.hbs
+++ b/diary/views/login.hbs
@@ -1,8 +1,8 @@
 <div class="row flex-center form-middle">
     <div class="sm-5 col border border-primary padding-left-large padding-right-large">
         <form id="diaryLoginForm" method="POST" action="/user/login">
-            {{#if error}}
-              <div class="alert alert-danger">{{error}}</div>
+            {{#if message}}
+              <div class="alert {{message.class}}">{{message.message}}</div>
             {{/if}}
             <div class="form-group">
                 <label for="username">User name: </label>
