--- a/diary/views/register.hbs
+++ b/diary/views/register.hbs
@@ -3,26 +3,28 @@
         <form method="POST" action="/user/register">
             <div class="form-group">
                 <label for="username">User name: </label>
-                <input class="input-block" type="text" name="username" id="username" placeholder="User Name">
+                <input class="input-block" type="text" name="username" id="username" placeholder="User Name" value='{{#if newUser }}{{newUser.username}}{{/if}}'>
             </div>
             <div class="form-group">
                 <label for="password">Password: </label>
-                <input class="input-block" type="password" name="password" id="password" placeholder="Password">
+                <input class="input-block" type="password" name="password" id="password" placeholder="Password" value='{{#if newUser }}{{newUser.password}}{{/if}}'>
             </div>
             <div class="form-group">
                 <label for="passwordRepeat">Repaet Password: </label>
                 <input class="input-block" type="password" name="passwordRepeat" id="passwordRepeat"
-                    placeholder="Repeat Password">
+                    placeholder="Repeat Password" value='{{#if newUser }}{{newUser.passwordRepeat}}{{/if}}'>
             </div>
             <div class="form-group">
                 <label for="name">Full Name: </label>
-                <input class="input-block" type="text" name="name" id="name" placeholder="Full Name">
+                <input class="input-block" type="text" name="name" id="name" placeholder="Full Name" value='{{#if newUser }}{{newUser.name}}{{/if}}'>
             </div>
             <div class="form-group">
                 <label for="email">Email address: </label>
-                <input class="input-block" type="text" name="email" id="email" placeholder="Email">
+                <input class="input-block" type="text" name="email" id="email" placeholder="Email" value='{{#if newUser }}{{newUser.email}}{{/if}}'>
             </div>
-
+            {{#if error}}
+            <div class="alert alert-danger">{{error}}</div>
+            {{/if}}
             <div>
                 <button class="btn-success" type="submit">Register</button>
             </div>
