--- a/diary/views/login.hbs
+++ b/diary/views/login.hbs
@@ -1,5 +1,5 @@
 <div class="row flex-center form-middle">
-    <div class="sm-5 col border border-primary padding-left-large padding-right-large">
+    <div class="sm-5 col border border-primary padding-left-large padding-right-large paper">
         <form id="diaryLoginForm" method="POST" action="/user/login">
             {{#if message}}
               <div class="alert {{message.class}}">{{message.message}}</div>
