--- a/diary/views/register.hbs
+++ b/diary/views/register.hbs
@@ -1,5 +1,5 @@
 <div class="row flex-center form-middle">
-    <div class="sm-5 col border border-primary padding-left-large padding-right-large">
+    <div class="sm-5 col border border-primary padding-left-large padding-right-large paper">
         <form method="POST" action="/user/register">
             <div class="form-group">
                 <label for="username">User name: </label>
