--- a/diary/views/layout.hbs
+++ b/diary/views/layout.hbs
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <title>{{title}}</title>
-    <link rel="stylesheet" href="/assets/vendor/papercss/paper.min.css"/>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/assets/vendor/papercss/paper.min.css" />
     <link rel='stylesheet' href='/assets/stylesheets/style.css' />
+
+    {{!-- Scripts --}}
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="/assets/vendor/moment/moment.min.js"></script>
+    /Users/danha/workspace/node/my-projects/diary/diary/node_modules/moment/min/moment.min.js
   </head>
+
   <body>
     {{> header }}
     {{{body}}}
   </body>
+
 </html>
