--- a/diary/views/register.hbs
+++ b/diary/views/register.hbs
@@ -3,7 +3,7 @@
         <form method="POST" action="/user/register">
             <div class="form-group">
                 <label for="username">User name: </label>
-                <input class="input-block" type="text" name="username" id="username" placeholder="User Name" value='{{#if newUser }}{{newUser.username}}{{/if}}'>
+                <input class="input-block" type="text" name="username" id="username" placeholder="User Name" value='{{#if newUser }}{{newUser.username}}{{/if}}' autofocus>
             </div>
             <div class="form-group">
                 <label for="password">Password: </label>
