--- a/diary/views/login.hbs
+++ b/diary/views/login.hbs
@@ -6,7 +6,7 @@
             {{/if}}
             <div class="form-group">
                 <label for="username">User name: </label>
-                <input class="input-block" type="text" name="username" id="username" placeholder="User Name">
+                <input class="input-block" type="text" name="username" id="username" placeholder="User Name" autofocus>
             </div>
             <div class="form-group">
                 <label for="password">Password: </label>
