--- a/diary/views/partials/entry.hbs
+++ b/diary/views/partials/entry.hbs
@@ -1,6 +1,6 @@
 <div class="paper">
-    <form id="formAddEditEntry" method='POST' action='/entry/save'>
-        {{#if docreate}}
+    <form id="formAddEditEntry" method='POST' action='/save'>
+        {{#if entryData.docreate}}
         <input type='hidden' name='docreate' value="create">
         {{else}}
         <input type='hidden' name='docreate' value="update">
@@ -18,21 +18,22 @@
             {{/if}}
             <div class="col sm-4">
                 <div class="form-group">
-                    <label for="date">Date</label>
-                    {{#if docreate }}
-                    <input type="text" name="date" id="date" class="input-block" value="{{date}}" readonly>
+                    <label for="formattedDate">Date</label>
+                    {{#if entryData.docreate }}
+                    <input type="text" name="formattedDate" id="formattedDate" class="input-block"
+                        value="{{entryData.formattedDate}}" readonly>
                     {{else}}
-                    <input type="text" name="date" id="date" class="input-block" disabled
-                        value='{{#if entry }}{{date}}{{/if}}'>
-                    <input hidden type="text" name="date" value='{{#if entry }}{{date}}{{/if}}'>
+                    <input type="text" name="formattedDate" id="formattedDate" class="input-block" disabled
+                        value='{{entryData.formattedDate}}'>
                     {{/if}}
+                    <input hidden type="text" name="date" value='{{entryData.date}}'>
                 </div>
             </div>
             <div class="col sm-8">
                 <div class="form-group">
                     <label for="title">Title</label>
                     <input type="text" name="title" id="title" class="input-block" placeholder="Title"
-                        autocomplete="off" value='{{#if entry }}{{entry.title}}{{/if}}'>
+                        autocomplete="off" autofocus value='{{#if entryData.entry }}{{entryData.entry.title}}{{/if}}'>
                 </div>
             </div>
         </div>
@@ -41,7 +42,7 @@
                 <div class="form-group">
                     <label for="content">Content</label>
                     <textarea class="input-block" rows="10" name='content' id="content" autocomplete="off"
-                        placeholder="What is on your mind?">{{#if entry }}{{entry.content}}{{/if}}</textarea>
+                        placeholder="What is on your mind?">{{#if entryData.entry }}{{entryData.entry.content}}{{/if}}</textarea>
                 </div>
             </div>
         </div>
