--- a/diary/public/assets/stylesheets/style.css
+++ b/diary/public/assets/stylesheets/style.css
@@ -8,6 +8,19 @@ a {
   color: #00B7FF;
 }
 
+label {
+  font-size: 1.2rem;
+  font-family: "Patrick Hand SC", sans-serif;
+  font-weight: normal;
+}
+
+.small-spacing {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
 .history-item{
   border-bottom: 1px solid #e6e7e9;
     color: #41403e;
